--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -11,3 +11,9 @@
 html, body, #root {
   height: 100%;
 }
+
+#root {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
