--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -9,11 +9,22 @@
 }
 
 html, body, #root {
-  height: 100%;
+  min-height: 100vh
 }
 
 #root {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+}
+
+
+@layer components  {
+  .active_button {
+    @apply relative z-10 inline-flex items-center bg-indigo-600 px-4 py-2 text-sm font-semibold text-white focus:z-20 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600
+  }
+
+  .page_button {
+    @apply relative inline-flex items-center px-4 py-2 text-sm font-semibold text-gray-900 ring-1 ring-inset ring-gray-300 hover:bg-gray-50 focus:z-20 focus:outline-offset-0
+  }
 }
